charts/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:2.3.5
          ports:
            - containerPort: 9696
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 350Mi
              cpu: 200m
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          hostPath:
            path: /mnt/ext_ssh_bk/configs/prowlarr
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: 9696
